[gd_scene load_steps=43 format=3 uid="uid://dvpiw2o5x5g5k"]

[ext_resource type="PackedScene" uid="uid://dyfg0oxvycy7q" path="res://src/main/puzzle/night/NightPuzzleTileMap.tscn" id="1"]
[ext_resource type="PackedScene" path="res://src/main/puzzle/GoopViewports.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://blv5oqwer3srk" path="res://assets/main/puzzle/night/night-sky-a-sheet.png" id="3"]
[ext_resource type="Texture2D" uid="uid://blxvk06h4wki2" path="res://assets/main/puzzle/night/night-sky-b-sheet.png" id="4"]
[ext_resource type="Script" path="res://src/main/puzzle/night/night-playfield.gd" id="5"]
[ext_resource type="Script" path="res://src/main/puzzle/night/night-sky.gd" id="6"]
[ext_resource type="PackedScene" path="res://src/main/puzzle/night/NightStars.tscn" id="7"]
[ext_resource type="Shader" path="res://src/main/puzzle/flat-mix.gdshader" id="8"]
[ext_resource type="Script" path="res://src/main/puzzle/night/night-playfield-tile-map.gd" id="9"]
[ext_resource type="Script" path="res://src/main/puzzle/night/night-pickups.gd" id="10"]
[ext_resource type="PackedScene" path="res://src/main/puzzle/night/NightPickup.tscn" id="11"]
[ext_resource type="Texture2D" uid="uid://bqiy0func6p3f" path="res://assets/main/fuzzy-circle-128.png" id="12"]
[ext_resource type="Texture2D" uid="uid://b0l32ydlcobpj" path="res://assets/main/puzzle/playfield-light.png" id="13"]
[ext_resource type="Script" path="res://src/main/puzzle/night/night-playfield-fx.gd" id="14"]
[ext_resource type="Script" path="res://src/main/puzzle/night/night-star-poofs.gd" id="15"]
[ext_resource type="Texture2D" uid="uid://csnk6d4fm8j7c" path="res://assets/main/puzzle/night/night-sky-c.png" id="16"]
[ext_resource type="PackedScene" path="res://src/main/puzzle/night/NightStarPoof.tscn" id="17"]
[ext_resource type="Material" uid="uid://cy8bt5568yy6f" path="res://src/main/puzzle/night/night-stars-dark-material.tres" id="18"]
[ext_resource type="Texture2D" uid="uid://wd1poihu7eqv" path="res://assets/main/puzzle/critter/onion-sheet.png" id="19"]
[ext_resource type="Script" path="res://src/main/puzzle/night/night-sky-glow.gd" id="20"]
[ext_resource type="Script" path="res://src/main/puzzle/night/night-onion.gd" id="21"]
[ext_resource type="Texture2D" uid="uid://bxp26bxn04sml" path="res://assets/main/puzzle/night/night-sky-particle-sheet.png" id="22"]

[sub_resource type="CanvasItemMaterial" id="24"]
particles_animation = true
particles_anim_h_frames = 2
particles_anim_v_frames = 2
particles_anim_loop = false

[sub_resource type="CanvasItemMaterial" id="27"]
particles_animation = true
particles_anim_h_frames = 2
particles_anim_v_frames = 2
particles_anim_loop = false

[sub_resource type="Gradient" id="29"]
offsets = PackedFloat32Array(0, 0.492929, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0.831373, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="30"]
gradient = SubResource("29")

[sub_resource type="Curve" id="31"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.296591), -1.80053, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="32"]
curve = SubResource("31")

[sub_resource type="ParticleProcessMaterial" id="28"]
lifetime_randomness = 0.25
spread = 180.0
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("32")
color_ramp = SubResource("30")

[sub_resource type="Animation" id="25"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Onion/Onion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [20]
}

[sub_resource type="Animation" id="26"]
resource_name = "default"
length = 5.33333
loop_mode = 1
step = 0.333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Onion/Onion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.666667, 1.33333, 2, 2.66667, 3.33333, 4, 4.66667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23, 24, 25, 26, 27]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vj2pi"]
_data = {
"RESET": SubResource("25"),
"default": SubResource("26")
}

[sub_resource type="ShaderMaterial" id="15"]
resource_local_to_scene = true
shader = ExtResource("8")
shader_parameter/mix_color = Color(1, 1, 1, 0)

[sub_resource type="CanvasItemMaterial" id="16"]
blend_mode = 1

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pvwos"]
texture = ExtResource("13")
texture_region_size = Vector2i(36, 32)
0:0/0 = 0

[sub_resource type="TileSet" id="17"]
tile_size = Vector2i(36, 32)
sources/0 = SubResource("TileSetAtlasSource_pvwos")

[sub_resource type="CanvasItemMaterial" id="22"]
blend_mode = 1

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_aqgtj"]
texture = ExtResource("12")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0

[sub_resource type="TileSet" id="23"]
tile_size = Vector2i(36, 32)
sources/0 = SubResource("TileSetAtlasSource_aqgtj")

[sub_resource type="CanvasItemMaterial" id="20"]
blend_mode = 1

[sub_resource type="ViewportTexture" id="12"]
viewport_path = NodePath("TileMapClip/TileMap/ShadowViewport")

[sub_resource type="ViewportTexture" id="14"]
viewport_path = NodePath("TileMapClip/TileMap/GhostPieceViewport")

[node name="NightPlayfield" type="Control" groups=["night_mode_visible"]]
layout_mode = 3
anchors_preset = 0
offset_right = 324.0
offset_bottom = 544.0
script = ExtResource("5")

[node name="BgGlobViewports" parent="." instance=ExtResource("2")]
anchors_preset = 0
offset_right = 324.0
offset_bottom = 544.0
glob_max_scale = 1.5

[node name="TileMapClip" type="Control" parent="."]
clip_contents = true
anchors_preset = 0
offset_right = 324.0
offset_bottom = 544.0

[node name="NightSky" type="ColorRect" parent="TileMapClip"]
layout_mode = 0
offset_right = 324.0
offset_bottom = 544.0
color = Color(0.121569, 0.121569, 0.239216, 1)
script = ExtResource("6")

[node name="SkyA" type="Sprite2D" parent="TileMapClip/NightSky"]
position = Vector2(162, 91.712)
scale = Vector2(0.44, 0.44)
texture = ExtResource("3")
hframes = 3

[node name="SkyB" type="Sprite2D" parent="TileMapClip/NightSky"]
position = Vector2(162, 91.712)
scale = Vector2(0.44, 0.44)
texture = ExtResource("4")
hframes = 3

[node name="AnimateTimer" type="Timer" parent="TileMapClip/NightSky"]
wait_time = 1.333
autostart = true

[node name="NightStarsDark" parent="TileMapClip/NightSky" instance=ExtResource("7")]
modulate = Color(0.329412, 0.415686, 0.584314, 1)
material = SubResource("24")
position = Vector2(154.227, 595.369)
amount = 160
process_material = ExtResource("18")
preprocess = 20.0
speed_scale = 0.2

[node name="SkyGlow" type="Sprite2D" parent="TileMapClip/NightSky"]
position = Vector2(162, 92)
scale = Vector2(0.44, 0.44)
texture = ExtResource("16")
script = ExtResource("20")
onion_sprite_path = NodePath("../../Onion/Onion")

[node name="GPUParticles2D" type="GPUParticles2D" parent="TileMapClip/NightSky/SkyGlow"]
material = SubResource("27")
amount = 36
process_material = SubResource("28")
texture = ExtResource("22")
lifetime = 5.0
preprocess = 5.0
visibility_rect = Rect2(-400, -400, 800, 800)

[node name="NightStarsLight" parent="TileMapClip/NightSky" instance=ExtResource("7")]
position = Vector2(154.227, 595.369)
preprocess = 20.0
speed_scale = 0.4

[node name="Onion" type="Control" parent="TileMapClip"]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Onion" type="Sprite2D" parent="TileMapClip/Onion"]
position = Vector2(162, 92)
scale = Vector2(0.44, 0.44)
texture = ExtResource("19")
offset = Vector2(0, 50)
hframes = 6
vframes = 7
frame = 20
script = ExtResource("21")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TileMapClip/Onion"]
root_node = NodePath("../../NightSky")
autoplay = "default"
libraries = {
"": SubResource("AnimationLibrary_vj2pi")
}

[node name="Pickups" type="Control" parent="TileMapClip"]
anchors_preset = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -162.0
offset_top = -272.0
offset_right = 162.0
offset_bottom = 272.0
script = ExtResource("10")
PickupScene = ExtResource("11")

[node name="Visuals" type="Control" parent="TileMapClip/Pickups"]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TileMap" parent="TileMapClip" instance=ExtResource("1")]
z_index = 4
material = SubResource("15")
position = Vector2(0, -96)
script = ExtResource("9")

[node name="PlayfieldFx" type="Node2D" parent="TileMapClip"]
position = Vector2(0, -96)
script = ExtResource("14")

[node name="LightMap" type="TileMap" parent="TileMapClip/PlayfieldFx"]
modulate = Color(0.682353, 0.847059, 0.815686, 1)
material = SubResource("16")
tile_set = SubResource("17")
format = 2

[node name="GlowMap" type="TileMap" parent="TileMapClip/PlayfieldFx"]
modulate = Color(0.682353, 0.847059, 0.815686, 1)
z_index = 3
material = SubResource("22")
tile_set = SubResource("23")
format = 2

[node name="BgStrobe" type="ColorRect" parent="TileMapClip/PlayfieldFx"]
material = SubResource("20")
offset_top = 96.0
offset_right = 324.0
offset_bottom = 640.0
color = Color(0.682353, 0.847059, 0.815686, 0)

[node name="StarPoofs" type="Node2D" parent="TileMapClip"]
z_index = 5
position = Vector2(0, -96)
script = ExtResource("15")
StarPoofScene = ExtResource("17")

[node name="ShadowTexture" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.313726)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource("12")
flip_v = true

[node name="GhostPieceTexture" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.235294)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource("14")
flip_v = true

[connection signal="visibility_changed" from="TileMapClip/NightSky" to="TileMapClip/NightSky" method="_on_visibility_changed"]
[connection signal="timeout" from="TileMapClip/NightSky/AnimateTimer" to="TileMapClip/NightSky" method="_on_AnimateTimer_timeout"]
